# repo-updater

./: .gitignore  .updateignore.example  Cargo.toml  LICENSE  README.md
src/: config.rs  discovery.rs  git.rs  main.rs  sync.rs
