[package]
name = "repo-updater"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/AlfElFriki/repo-updater.git"
homepage = "https://github.com/AlfElFriki/repo-updater"
license = "MIT"
description = "A command-line tool to fetch-prune/update repositories based on specified patterns and wildcards."

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4.18"
walkdir = "2.5.0"
